tests/reference/asr-do_concurrent1-74bde45.stderr
semantic error: Loop variable `j` cannot be part of local expression
 --> tests/errors/do_concurrent1.f90:5:26
  |
5 | do concurrent (j = 1:Ny) local(i, j)
  |                          ^^^^^^^^^^^ 
